--- a/.github/workflows/libclang-linux-amd64.yml
+++ b/.github/workflows/libclang-linux-amd64.yml
@@ -23,7 +23,7 @@ jobs:
         python-version: '3.10'
     - name: install wheel dependencies
       run: |
-        pip3 install wheel
+        pip3 install "wheel<0.40.0"
     - name: get llvm-project
       run: |
         wget -q https://github.com/llvm/llvm-project/releases/download/llvmorg-$LLVM_VER/llvm-project-$LLVM_VER.src.tar.xz
@@ -86,7 +86,7 @@ jobs:
         python-version: '3.10'
     - name: install wheel dependencies
       run: |
-        pip3 install wheel
+        pip3 install "wheel<0.40.0"
     - name: get llvm-project
       run: |
         wget -q https://github.com/llvm/llvm-project/releases/download/llvmorg-$LLVM_VER/llvm-project-$LLVM_VER.src.tar.xz
