--- a/.github/workflows/libclang-macosx-amd64.yml
+++ b/.github/workflows/libclang-macosx-amd64.yml
@@ -21,7 +21,7 @@ jobs:
         python-version: '3.10'
     - name: install wheel dependencies
       run: |
-        pip3 install wheel
+        pip3 install "wheel<0.40.0"
     - name: install gnu-tar
       run: |
         brew install gnu-tar
